--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-numpy
-fastapi
-uvicorn
-opencv-python
-requests
-torch
-torchvision
-faiss-cpu
-pydantic-settings
+numpy==2.2.6
+fastapi==0.116.1
+uvicorn==0.35.0
+opencv-python==4.12.0.88
+requests==2.32.4
+torch==2.7.1+cpu
+torchvision==0.22.1+cpu
+faiss-cpu==1.11.0.post1
+pydantic==2.11.7
+pydantic-settings==2.10.1
+python-multipart==0.0.20
+
+--extra-index-url https://download.pytorch.org/whl/cpu
