--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 numpy==2.2.6
 fastapi==0.116.1
 uvicorn==0.35.0
@@ -9,5 +11,4 @@ faiss-cpu==1.11.0.post1
 pydantic==2.11.7
 pydantic-settings==2.10.1
 python-multipart==0.0.20
-
---extra-index-url https://download.pytorch.org/whl/cpu
+xformers==0.0.31.post1
