--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
---extra-index-url https://download.pytorch.org/whl/cpu
+-index-url https://download.pytorch.org/whl/cpu
 
 numpy==2.2.6
 fastapi==0.116.1
