--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "numpy>=2.2.6",
     "opencv-python>=4.11.0.86",
     "python-multipart>=0.0.20",
+    "rich>=14.1.0",
     "starlette>=0.47.2",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
